--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -2,67 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>LAVANYA R | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Grade Calculator</title>
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#6a0dad" />
+  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png" loading="lazy"/>
+  <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png" loading="lazy"/>
+  <link rel="stylesheet" href="grade.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet" />
 </head>
 <body>
-
-  <header class="header-flex">
-    <img src="lavanya.jpg" alt="Lavanya R" class="profile-pic" loading="lazy">
-    <div class="intro">
-      <h1><span class="typing-text"></span></h1>
-      <p>Computer Science Student | Aspiring Developer</p>
-      <a href="LavanyaResume.pdf" class="btn" download>📄 Download Resume</a>
+  <div class="container">
+    <h2><span class="typing-text">Student Grade Calculator</span></h2>
+    
+    <div id="inputs">
+      <div class="subject">
+        <input type="number" placeholder="Subject 1 Marks" readonly onclick="this.readOnly=false;" onblur="this.readOnly=true;" />
+        <button onclick="deleteSubject(this)">🗑️</button>
+      </div>
+      <div class="subject">
+        <input type="number" placeholder="Subject 2 Marks" readonly onclick="this.readOnly=false;" onblur="this.readOnly=true;" />
+        <button onclick="deleteSubject(this)">🗑️</button>
+      </div>
+      <div class="subject">
+        <input type="number" placeholder="Subject 3 Marks" readonly onclick="this.readOnly=false;" onblur="this.readOnly=true;" />
+        <button onclick="deleteSubject(this)">🗑️</button>
+      </div>
     </div>
-  </header>
 
-  <section class="about">
-    <h2>About Me</h2>
-    <p>I’m a curious learner, passionate about web development and eager to explore real-world software solutions. I'm currently learning HTML, CSS, JavaScript, and GitHub.</p>
-  </section>
+    <button onclick="addSubject()">➕ Add Subject</button>
+    <button onclick="calculateGrade()">✅ Calculate</button>
+    <button onclick="sortSubjects()">🔢 Sort by Marks</button>
+    <p id="result"></p>
+    <button onclick="downloadResult()">⬇️ Download Result</button>
+    <button onclick="toggleDark()">🌓 Toggle Dark Mode</button>
+    <button id="installBtn" style="display:none; margin-top:15px;">📲 Install App</button>
 
-  <section class="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li>
-        <a href="grade-calculator" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
-      </li>
-      <li>
-        <a href="todo-app" target="_blank">✅ To-Do App</a> – A powerful task manager with PWA features.
-      </li>
-    </ul>
-  </section>
+    <select id="themeSelector" onchange="changeTheme()" style="margin-top: 10px; padding: 10px;">
+      <option value="default">🎨 Default</option>
+      <option value="blue">💙 Blue</option>
+      <option value="dark">🌑 Dark</option>
+      <option value="green">💚 Green</option>
+    </select>
+  </div>
 
-  <section class="contact">
-    <h2>Contact Me</h2>
-    <p>📧 Email: <a href="mailto:lavanyaravikumar2004@gmail.com">lavanyaravikumar2004@gmail.com</a></p>
-    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/lavanya-r-7a55492b3" target="_blank">linkedin.com/in/lavanya</a></p>
-    <p>🌍 GitHub: <a href="https://github.com/Lavanyaravikumar2004" target="_blank">github.com/Lavanyaravikumar2004</a></p>
-  </section>
+  <script src="grade.js"></script>
 
+  <!-- ✅ Service Worker Registration Script -->
   <script>
-    const text = "LAVANYA R";
-    const element = document.querySelector(".typing-text");
-    let index = 0;
-    function type() {
-      if (index < text.length) {
-        element.innerHTML += text.charAt(index);
-        index++;
-        setTimeout(type, 120);
-      }
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('✅ Service Worker registered successfully.'))
+        .catch(error => console.log('❌ Service Worker registration failed:', error));
     }
-    type();
+  </script>
 
-    // ✅ Service Worker Registration
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/grade-calculator/service-worker.js')
-        .then(reg => console.log('✅ Service Worker registered'))
-        .catch(err => console.error('❌ SW registration failed:', err));
-    });
-  }
-</script>
 </body>
 </html>
